<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <groupId>stincmale.server</groupId>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>server</artifactId>
  <version>0.0.0-SNAPSHOT</version>
  <name>Server</name>
  <packaging>jar</packaging>
  <description>
    A server framework based on Netty.
  </description>
  <url>${server.url}</url>
  <licenses>
    <license>
      <name>${server.licenseName}</name>
      <url>${server.licenseUrl}</url>
    </license>
  </licenses>
  <inceptionYear>2017</inceptionYear>
  <developers>
    <developer>
      <id>stIncMale</id>
      <name>Valiantsin Kavalenka</name>
      <email>public.vkovalenko@gmail.com</email>
      <url>https://www.kovalenko.link</url>
    </developer>
  </developers>
  <properties>
    <log4j.version>2.13.3</log4j.version>
    <junit-jupiter.version>5.6.2</junit-jupiter.version>
    <spring.version>5.2.7.RELEASE</spring.version>
    <netty4.version>4.1.50.Final</netty4.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
    <server.url>https://github.com/stIncMale/server</server.url>
    <server.licenseName>WTFPL</server.licenseName>
    <server.licenseUrl>http://www.wtfpl.net/</server.licenseUrl>
  </properties>
  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.apache.commons</groupId>
        <artifactId>commons-lang3</artifactId>
        <version>3.10</version>
      </dependency>
      <dependency>
        <groupId>io.netty</groupId>
        <artifactId>netty-all</artifactId>
        <version>${netty4.version}</version>
      </dependency>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>1.7.30</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-slf4j-impl</artifactId>
        <version>${log4j.version}</version>
      </dependency>
      <dependency>
        <groupId>org.apache.logging.log4j</groupId>
        <artifactId>log4j-core</artifactId>
        <version>${log4j.version}</version>
      </dependency>
      <dependency>
        <groupId>com.google.code.findbugs</groupId>
        <artifactId>jsr305</artifactId>
        <version>3.0.2</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>29.0-jre</version>
      </dependency>
      <dependency>
        <groupId>javax.inject</groupId>
        <artifactId>javax.inject</artifactId>
        <version>1</version>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-context</artifactId>
        <version>${spring.version}</version>
      </dependency>
      <dependency>
        <groupId>com.datadoghq</groupId>
        <artifactId>java-dogstatsd-client</artifactId>
        <version>2.10.1</version>
      </dependency>
      <dependency>
        <groupId>org.junit.jupiter</groupId>
        <artifactId>junit-jupiter-api</artifactId>
        <version>${junit-jupiter.version}</version>
      </dependency>
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-test</artifactId>
        <version>${spring.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>
  <dependencies>
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
    </dependency>
    <dependency>
      <groupId>io.netty</groupId>
      <artifactId>netty-all</artifactId>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.code.findbugs</groupId>
      <artifactId>jsr305</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.guava</groupId>
      <artifactId>guava</artifactId>
    </dependency>
    <dependency>
      <groupId>javax.inject</groupId>
      <artifactId>javax.inject</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-context</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>com.datadoghq</groupId>
      <artifactId>java-dogstatsd-client</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-slf4j-impl</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.1</version>
          <configuration>
            <source>14</source>
            <target>14</target>
            <debug>true</debug>
            <debuglevel>lines,vars,source</debuglevel>
            <showWarnings>true</showWarnings>
            <showDeprecation>true</showDeprecation>
            <compilerArgs>
              <arg>-Werror</arg>
              <arg>-Xlint:all,-exports,-try,-processing,-requires-automatic,-requires-transitive-automatic</arg>
            </compilerArgs>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>3.2.0</version>
          <configuration>
            <archive>
              <addMavenDescriptor>false</addMavenDescriptor>
              <manifest>
                <addDefaultImplementationEntries>false</addDefaultImplementationEntries>
                <addDefaultSpecificationEntries>false</addDefaultSpecificationEntries>
                <addClasspath>false</addClasspath>
              </manifest>
            </archive>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.0.0-M5</version>
          <configuration>
            <argLine>
              --add-opens stincmale.server/stincmale.server.example=ALL-UNNAMED
              --add-opens stincmale.server/stincmale.server.example=spring.context
              --add-opens stincmale.server/stincmale.server.reqres.spring.test=ALL-UNNAMED
              --add-exports stincmale.server/stincmale.server.reqres.spring.test=spring.context
            </argLine>
            <trimStackTrace>false</trimStackTrace>
            <parallel>${server.maven-surefire-plugin.parallel}</parallel>
            <threadCount>5</threadCount>
          </configuration>
          <dependencies>
            <dependency>
              <groupId>org.junit.jupiter</groupId>
              <artifactId>junit-jupiter-engine</artifactId>
              <version>${junit-jupiter.version}</version>
            </dependency>
          </dependencies>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>3.2.0</version>
          <configuration>
            <author>false</author>
            <show>protected</show>
            <failOnWarnings>true</failOnWarnings>
            <linksource>false</linksource>
            <header>
              <![CDATA[
								<a href="${server.url}">Server</a> ${project.version}
								<br>
								Java API Documentation
							]]>
            </header>
            <footer>
              <![CDATA[Licensed under <a href="${server.licenseUrl}">${server.licenseName}</a>]]>
            </footer>
            <bottom><![CDATA[&#x200b;]]></bottom>
            <locale>en</locale>
            <windowtitle>Server Java API Documentation</windowtitle>
            <isOffline>false</isOffline>
            <links>
              <link>https://cr.openjdk.java.net/~iris/se/14/spec/fr/java-se-14-fr-spec/api/</link>
              <link>https://netty.io/4.1/api/</link>
              <link>https://www.kovalenko.link/jsr-305/javadoc/</link>
              <link>https://guava.dev/releases/29.0-jre/api/docs/</link>
              <link>https://docs.spring.io/spring/docs/5.2.7.RELEASE/javadoc-api/</link>
              <link>https://www.slf4j.org/apidocs/</link>
            </links>
            <validateLinks>true</validateLinks>
            <includeDependencySources>false</includeDependencySources>
            <includeTransitiveDependencySources>false</includeTransitiveDependencySources>
            <serialwarn>false</serialwarn>
            <additionalparam>-Xdoclint:all</additionalparam>
          </configuration>
          <executions>
            <execution>
              <id>attach-aggregated-javadocs</id>
              <phase>package</phase>
              <goals>
                <goal>aggregate-jar</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-source-plugin</artifactId>
          <version>3.2.1</version>
          <executions>
            <execution>
              <id>attach-sources</id>
              <phase>package</phase>
              <goals>
                <goal>jar-no-fork</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>
    <defaultGoal>verify</defaultGoal>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
      </plugin>
    </plugins>
  </build>
  <profiles>
    <profile>
      <id>default</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <maven.test.skip>false</maven.test.skip>
        <server.maven-surefire-plugin.parallel>suitesAndClasses</server.maven-surefire-plugin.parallel>
      </properties>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
